Replace assert with null pointer check

The assert here is wrong because it's perfectly valid for
KisClipboard::instance()->clip to return a null pointer, for
instance when the user cancels the profile dialog.

BUG:468826